<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/android_permissions"
        android:layout_marginTop="30dp"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="200dp"
        android:paddingEnd="0dp"
        android:layout_marginBottom="400dp"
        android:gravity="center"
        android:layout_weight="1">

        <TableRow
            android:id="@+id/tableRowBuildVersion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewBuildVersionLabel"
                    android:text="@string/build_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewBuildVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/xx"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRowAndroidVersion"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewAndroidVersionLabel"
                    android:text="@string/android_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAndroidVersion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/xx"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRowFineLocationPermissions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewFineLocationPermission"
                    android:text="@string/fine_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:id="@+id/viewFineLocationPermission"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_yellow"
                    android:visibility="visible" />
<!--
                <Button
                    android:id="@+id/buttonEnableOverlayPermissions"
                    android:text="@string/enable"
                    android:layout_width="200dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/button_blue"
                    android:gravity="center|center_vertical"
                    android:textColor="@color/white" />
-->
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableRowBackgroundLocationPermissions"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewBackgroundLocationPermission"
                    android:text="@string/background_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="36sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:id="@+id/viewBackgroundLocationPermission"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_yellow"
                    android:visibility="visible" />
<!--
                <Button
                    android:id="@+id/buttonEnableWriteSettingsPermissions"
                    android:text="@string/enable"
                    android:layout_width="200dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/button_blue"
                    android:gravity="center|center_vertical"
                    android:textColor="@color/white" />
-->
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableWriteExternalStoragePermission"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewWriteExternalStoragePermission"
                    android:text="@string/write_external_storage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="36sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:id="@+id/viewWriteExternalStoragePermission"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_yellow"
                    android:visibility="visible" />
<!--
                <Button
                    android:id="@+id/buttonEnableWriteExternalStoragePermissions"
                    android:text="@string/enable"
                    android:layout_width="200dp"
                    android:layout_height="75dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/button_blue"
                    android:gravity="center|center_vertical"
                    android:textColor="@color/white" />
-->
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/tableNearbyConnectivityPermission"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="gone"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewNearbyConnectivityPermission"
                    android:text="@string/nearby_permission_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textSize="36sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:id="@+id/viewNearbyConnectivityPermission"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_yellow"
                    android:visibility="visible" />
                <!--
                                <Button
                                    android:id="@+id/buttonEnableWriteExternalStoragePermissions"
                                    android:text="@string/enable"
                                    android:layout_width="200dp"
                                    android:layout_height="75dp"
                                    android:layout_marginStart="30dp"
                                    android:background="@drawable/button_blue"
                                    android:gravity="center|center_vertical"
                                    android:textColor="@color/white" />
                -->
            </LinearLayout>

        </TableRow>

    </TableLayout>

</LinearLayout>